added webcam support, install python dependencies

--- a/resources/sass/browser/app.scss
+++ b/resources/sass/browser/app.scss
@@ -37,3 +37,9 @@ input[type=number] {
 .ck-editor__editable_inline {
   min-height: 250px;
 }
+
+#video_element {
+  width: 800;
+  height: 600;
+  background-color: #000;
+}
