--- a/public/css/browser.css
+++ b/public/css/browser.css
@@ -17423,3 +17423,9 @@ input[type=number] {
 .ck-editor__editable_inline {
   min-height: 250px;
 }
+
+#video_element {
+  width: 800;
+  height: 600;
+  background-color: #000;
+}
