--- a/resources/sass/browser/app.scss
+++ b/resources/sass/browser/app.scss
@@ -13,7 +13,6 @@
 //FontAwesome
 @import '~@fortawesome/fontawesome-free/scss/fontawesome.scss';
 
-
 text-white {
   color: white;
 }
@@ -58,4 +57,37 @@ input[type=number] {
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
+}
+
+.star-color {
+  color: #ffa534;
+}
+
+.splide__pagination__page.is-active {
+  transform: scale(1.4);
+  background: #000 !important;
+}
+
+.rounded-top-left-3 {
+  border-top-left-radius: 1rem !important;
+}
+
+.rounded-top-right-3 {
+  border-top-right-radius: 1rem !important;
+}
+
+.rounded-bottom-right-3 {
+  border-bottom-right-radius: 1rem !important;
+}
+
+.rounded-bottom-left-3 {
+  border-bottom-left-radius: 1rem !important;
+}
+
+.rounded-3 {
+  border-radius: 1rem !important;
+}
+
+.card-img-top {
+  height: 10rem !important;
 }
