allow attaching multiple images to product

--- a/resources/sass/browser/app.scss
+++ b/resources/sass/browser/app.scss
@@ -13,6 +13,8 @@
 //FontAwesome
 @import '~@fortawesome/fontawesome-free/scss/fontawesome.scss';
 
+@import '~dropzone/dist/dropzone.css';
+
 text-white {
   color: white;
 }
