allow user to add products to cart and remove

--- a/public/css/browser.css
+++ b/public/css/browser.css
@@ -17818,3 +17818,14 @@ input[type=number] {
   width: 10rem !important;
   border-radius: 50% !important;
 }
+
+.cart-badge-icon {
+  position: absolute;
+  background-color: #5fafff;
+  border-radius: 50%;
+  width: 1.025rem;
+  height: 1.025rem;
+  font-size: 12px;
+  right: 0.375rem;
+  top: -0.15rem;
+}
