--- a/resources/sass/browser/app.scss
+++ b/resources/sass/browser/app.scss
@@ -1,112 +1,124 @@
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url("https://fonts.googleapis.com/css?family=Nunito");
 
 // Variables
-@import 'variables';
+@import "variables";
 
 // Bootstrap
-@import '~bootstrap/scss/bootstrap';
+@import "~bootstrap/scss/bootstrap";
 
 //SweetAlert2
-@import '~sweetalert2/src/sweetalert2.scss';
+@import "~sweetalert2/src/sweetalert2.scss";
 
 //FontAwesome
-@import '~@fortawesome/fontawesome-free/scss/fontawesome.scss';
+@import "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
 
-@import '~dropzone/dist/dropzone.css';
+@import "~dropzone/dist/dropzone.css";
 
 text-white {
-  color: white;
+    color: white;
 }
 
-p, label, ul{
-  margin: 0;
+p,
+label,
+ul {
+    margin: 0;
 }
 
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+    -webkit-appearance: none;
+    margin: 0;
 }
 
 /* Firefox */
-input[type=number] {
-  -moz-appearance: textfield;
+input[type="number"] {
+    -moz-appearance: textfield;
 }
 
 .ck-editor__editable_inline {
-  min-height: 250px;
+    min-height: 250px;
 }
 
 #video_element {
-  width: 800;
-  height: 600;
-  background-color: #000;
-  transform: scaleX(-1);
-  -webkit-transform: scaleX(-1);
+    width: 800;
+    height: 600;
+    background-color: #000;
+    transform: scaleX(-1);
+    -webkit-transform: scaleX(-1);
 }
 
 .loader {
-  border: 5px solid #f3f3f3;
-  border-top: 5px solid #3490dc;
-  border-radius: 50%;
-  width: 25px;
-  height: 25px;
-  animation: spin 1.5s linear infinite;
+    border: 5px solid #f3f3f3;
+    border-top: 5px solid #3490dc;
+    border-radius: 50%;
+    width: 25px;
+    height: 25px;
+    animation: spin 1.5s linear infinite;
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 .star-color {
-  color: #ffa534;
+    color: #ffa534;
 }
 
 .splide__pagination__page.is-active {
-  transform: scale(1.4);
-  background: #000 !important;
+    transform: scale(1.4);
+    background: #000 !important;
 }
 
 .rounded-top-left-3 {
-  border-top-left-radius: 1rem !important;
+    border-top-left-radius: 1rem !important;
 }
 
 .rounded-top-right-3 {
-  border-top-right-radius: 1rem !important;
+    border-top-right-radius: 1rem !important;
 }
 
 .rounded-bottom-right-3 {
-  border-bottom-right-radius: 1rem !important;
+    border-bottom-right-radius: 1rem !important;
 }
 
 .rounded-bottom-left-3 {
-  border-bottom-left-radius: 1rem !important;
+    border-bottom-left-radius: 1rem !important;
 }
 
 .rounded-3 {
-  border-radius: 1rem !important;
+    border-radius: 1rem !important;
 }
 
 .card-img-top {
-  height: 10rem !important;
+    height: 10rem !important;
 }
 
 .profile-image {
-  height: 10rem !important;
-  width: 10rem !important;
-  border-radius: 50% !important;
+    height: 10rem !important;
+    width: 10rem !important;
+    border-radius: 50% !important;
 }
 
 .cart-badge-icon {
-  position: absolute;
-  background-color: #5fafff;
-  border-radius: 50%;
-  width: 1.025rem;
-  height: 1.025rem;
-  font-size: 12px;
-  right: .375rem;
-  top: -.15rem;
+    position: absolute;
+    background-color: #5fafff;
+    border-radius: 50%;
+    width: 1.025rem;
+    height: 1.025rem;
+    font-size: 12px;
+    right: 0.375rem;
+    top: -0.15rem;
+}
+
+.footer {
+    position: relative;
+    clear: both;
+    margin-top:10rem;
 }
